[tool.poetry]
authors = ["g3onho<gunho1604@gmail.com"]
name = "pictureSpecialEffect"
version = "0.1.0"
description = "PyQt5-based GUI application for applying special effects to pictures."
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
opencv-contrib-python = "4.10.0.84"
numpy = "2.1.3"
PyQt5 = "5.15.9"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
